Uses resource message key instead of passing message directly

--- a/apps/showcase/src/main/resources/globalMessages_de.properties
+++ b/apps/showcase/src/main/resources/globalMessages_de.properties
@@ -5,3 +5,5 @@ item.create={0} neu anlegen
 item.list={0}-Liste
 
 token.transfer.time=Die \u00dcberweisung wurde am {0,date,HH:mm:ss MM-dd-yyyy} durchgef\u00fchrt
+
+struts1.gangsterAdded=Gangster {0} wurde erfolgreich hinzugefugt
