--- a/plugins/embeddedjsp/src/main/resources/org/apache/struts2/jasper/resources/LocalStrings_es.properties
+++ b/plugins/embeddedjsp/src/main/resources/org/apache/struts2/jasper/resources/LocalStrings_es.properties
@@ -329,7 +329,7 @@ jsp.error.attribute.noequal=se esperaba símbolo igual
 jsp.error.attribute.noquote=se esperaba símbolo comillas
 jsp.error.attribute.unterminated=el atributo para {0} no está terminado correctamente
 jsp.error.missing.tagInfo=El objeto TagInfo para {0} falta del TLD
-jsp.error.fragmentwithtype=No puede especificar ambos atributos 'fragment' y 'type'. Si está presente 'fragment', 'type' se pone como 'javax.servlet.jsp.tagext.JspFragment'
+jsp.error.fragmentwithtype=No puede especificar ambos atributos 'fragment' y 'type'. Si está presente 'fragment', 'type' se pone como 'jakarta.servlet.jsp.tagext.JspFragment'
 jsp.error.fragmentwithrtexprvalue=No puede especificar ambos atributos 'fragment' y 'rtexprvalue'.  Si está presente 'fragment', 'rtexprvalue' se pone como 'true'
 jsp.error.fragmentWithDeclareOrScope=Ambos atributos 'fragment' y 'declare' o 'scope' se han especificado en la directiva variable
 jsp.error.var_and_varReader=Sólo se puede especificar uno de \'var\' o \'varReader\'
