--- a/plugins/embeddedjsp/src/main/resources/org/apache/struts2/jasper/resources/LocalStrings_fr.properties
+++ b/plugins/embeddedjsp/src/main/resources/org/apache/struts2/jasper/resources/LocalStrings_fr.properties
@@ -279,7 +279,7 @@ jsp.error.attribute.noequal=Symbole égal (equal) attendu
 jsp.error.attribute.noquote=Symbole guillemet (quote) attendu
 jsp.error.attribute.unterminated=L''attribut pour {0} n''est pas correctement terminé
 jsp.error.missing.tagInfo=L''objet TagInfo de {0} est absent de la TLD
-jsp.error.fragmentwithtype=On ne peut indiquer à la fois les attributs 'fragment' et 'type'.  Si 'fragment' est présent, 'type' est fixé comme 'javax.servlet.jsp.tagext.JspFragment'
+jsp.error.fragmentwithtype=On ne peut indiquer à la fois les attributs 'fragment' et 'type'.  Si 'fragment' est présent, 'type' est fixé comme 'jakarta.servlet.jsp.tagext.JspFragment'
 jsp.error.fragmentwithrtexprvalue=On ne peut indiquer à la fois les attributs 'fragment' et 'rtexprvalue'.  Si 'fragment' est présent, 'rtexprvalue' est fixé à 'true'
 jsp.error.fragmentWithDeclareOrScope=Les attributs 'fragment' et 'declare' ou 'scope' sont indiqués dans la directive variable
 jsp.error.var_and_varReader=A la fois 'var' et 'varReader' sont indiqués
